--- a/Test3/Assembly-CSharp.csproj
+++ b/Test3/Assembly-CSharp.csproj
@@ -46,9 +46,10 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Follow.cs" />
-     <Compile Include="Assets\PlayerCamera.cs" />
+     <Compile Include="Assets\Scripts\Follow.cs" />
      <Compile Include="Assets\Scripts\Movement.cs" />
+     <Compile Include="Assets\Scripts\PlayerAnimations.cs" />
+     <Compile Include="Assets\Scripts\PlayerCamera.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
