--- a/Test3/Assembly-CSharp.csproj
+++ b/Test3/Assembly-CSharp.csproj
@@ -47,18 +47,18 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Enemy\Enemy.cs" />
-     <Compile Include="Assets\Scripts\Player\Follow.cs" />
+     <Compile Include="Assets\Scripts\Player\Actions\PlayerSwitch.cs" />
      <Compile Include="Assets\Scripts\Player\General\GhostModel.cs" />
      <Compile Include="Assets\Scripts\Player\General\PlayerModel.cs" />
      <Compile Include="Assets\Scripts\Player\General\ZombieModel.cs" />
-     <Compile Include="Assets\Scripts\Player\GhostBullet.cs" />
-     <Compile Include="Assets\Scripts\Player\Health.cs" />
+     <Compile Include="Assets\Scripts\Player\Ghost\Attacks\GhostHypnotize.cs" />
+     <Compile Include="Assets\Scripts\Player\Movement\PlayerFollow.cs" />
      <Compile Include="Assets\Scripts\Player\Movement\PlayerWalking.cs" />
-     <Compile Include="Assets\Scripts\Player\Plasma.cs" />
-     <Compile Include="Assets\Scripts\Player\PlayerAnimations.cs" />
-     <Compile Include="Assets\Scripts\Player\PlayerSwitch.cs" />
-     <Compile Include="Assets\Scripts\Player\ZombieAttack.cs" />
-     <Compile Include="Assets\Scripts\Scene\PlayerCamera.cs" />
+     <Compile Include="Assets\Scripts\Player\Zombie\ZombieAnimatorController.cs" />
+     <Compile Include="Assets\Scripts\Player\Zombie\ZombieAttack.cs" />
+     <Compile Include="Assets\Scripts\Scene\UI\HealthController.cs" />
+     <Compile Include="Assets\Scripts\Scene\UI\PlasmaController.cs" />
+     <Compile Include="Assets\Scripts\Scene\UI\PlayerCamera.cs" />
      <None Include="Assets\Materials\$Sprites-Bumped Diffuse.shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
