--- a/Test3/Assembly-CSharp.csproj
+++ b/Test3/Assembly-CSharp.csproj
@@ -46,7 +46,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\Enemy\Enemy.cs" />
+     <Compile Include="Assets\Scripts\Enemy\Controllers\EnemyController.cs" />
+     <Compile Include="Assets\Scripts\Enemy\Movement\EnemyMovement.cs" />
      <Compile Include="Assets\Scripts\Player\Actions\PlayerSwitch.cs" />
      <Compile Include="Assets\Scripts\Player\General\GhostModel.cs" />
      <Compile Include="Assets\Scripts\Player\General\PlayerModel.cs" />
@@ -54,8 +55,8 @@
      <Compile Include="Assets\Scripts\Player\Ghost\Attacks\GhostHypnotize.cs" />
      <Compile Include="Assets\Scripts\Player\Movement\PlayerFollow.cs" />
      <Compile Include="Assets\Scripts\Player\Movement\PlayerWalking.cs" />
-     <Compile Include="Assets\Scripts\Player\Zombie\ZombieAnimatorController.cs" />
-     <Compile Include="Assets\Scripts\Player\Zombie\ZombieAttack.cs" />
+     <Compile Include="Assets\Scripts\Player\Zombie\Animation\ZombieAnimatorController.cs" />
+     <Compile Include="Assets\Scripts\Player\Zombie\Attacks\ZombieAttack.cs" />
      <Compile Include="Assets\Scripts\Scene\UI\HealthController.cs" />
      <Compile Include="Assets\Scripts\Scene\UI\PlasmaController.cs" />
      <Compile Include="Assets\Scripts\Scene\UI\PlayerCamera.cs" />
