--- a/Test3/Assembly-CSharp-vs.csproj
+++ b/Test3/Assembly-CSharp-vs.csproj
@@ -57,9 +57,12 @@
      <Compile Include="Assets\Scripts\Player\Movement\PlayerWalking.cs" />
      <Compile Include="Assets\Scripts\Player\Zombie\Animation\ZombieAnimatorController.cs" />
      <Compile Include="Assets\Scripts\Player\Zombie\Attacks\ZombieAttack.cs" />
+     <Compile Include="Assets\Scripts\Scene\CameraOrthoSize.cs" />
+     <Compile Include="Assets\Scripts\Scene\LocalPositionSnapper.cs" />
      <Compile Include="Assets\Scripts\Scene\UI\HealthController.cs" />
      <Compile Include="Assets\Scripts\Scene\UI\PlasmaController.cs" />
      <Compile Include="Assets\Scripts\Scene\UI\PlayerCamera.cs" />
+     <Compile Include="Assets\Scripts\Scene\WorldScaler.cs" />
      <None Include="Assets\Materials\$Sprites-Bumped Diffuse.shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
