--- a/Test3/Assembly-CSharp.csproj
+++ b/Test3/Assembly-CSharp.csproj
@@ -65,7 +65,7 @@
      <Compile Include="Assets\Scripts\Scene\UI\PlasmaController.cs" />
      <Compile Include="Assets\Scripts\Scene\UI\PlayerCamera.cs" />
      <Compile Include="Assets\Scripts\Scene\WorldScaler.cs" />
-     <None Include="Assets\Materials\SpriteShadow.shader" />
+     <None Include="Assets\Materials\$Sprites-Bumped Diffuse.shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
