--- a/Test3/Assembly-CSharp.csproj
+++ b/Test3/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\Enemy\BaseballWolf\BaseballWolfMovement.cs" />
      <Compile Include="Assets\Scripts\Enemy\Controllers\EnemyController.cs" />
+     <Compile Include="Assets\Scripts\Enemy\FootballWolf\FootballScript.cs" />
      <Compile Include="Assets\Scripts\Enemy\FootballWolf\FootballWolfMovement.cs" />
      <Compile Include="Assets\Scripts\Enemy\Mikey\Movement\MikeyMovement.cs" />
      <Compile Include="Assets\Scripts\Enemy\Movement\EnemyMovement.cs" />
