--- a/Test3/Assembly-CSharp.csproj
+++ b/Test3/Assembly-CSharp.csproj
@@ -1,88 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>10.0.20506</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{B41F8A00-EB96-12E4-9B2C-D5A4DD892212}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AssemblyName>Assembly-CSharp</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <BaseDirectory>Assets</BaseDirectory>
+	<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+	<ProductVersion>10.0.20506</ProductVersion>
+	<SchemaVersion>2.0</SchemaVersion>
+	<ProjectGuid>{B41F8A00-EB96-12E4-9B2C-D5A4DD892212}</ProjectGuid>
+	<OutputType>Library</OutputType>
+	<AppDesignerFolder>Properties</AppDesignerFolder>
+	<RootNamespace></RootNamespace>
+	<AssemblyName>Assembly-CSharp</AssemblyName>
+	<TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+	<FileAlignment>512</FileAlignment>
+	<BaseDirectory>Assets</BaseDirectory>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>True</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>False</Optimize>
-    <OutputPath>Temp\bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;UNITY_5_1_3;UNITY_5_1;UNITY_5;ENABLE_NEW_BUGREPORTER;ENABLE_2D_PHYSICS;ENABLE_4_6_FEATURES;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PHYSICS_PHYSX3;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_LICENSE;ENABLE_AUDIOMIXER_SUSPEND;ENABLE_EDITOR_METRICS;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_LOCALIZATION;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_TEXTUREID_MAP;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <NoWarn>0169</NoWarn>
+	<DebugSymbols>true</DebugSymbols>
+	<DebugType>full</DebugType>
+	<Optimize>false</Optimize>
+	<OutputPath>Temp\bin\Debug\</OutputPath>
+	<DefineConstants>DEBUG;TRACE;UNITY_5_1_3;UNITY_5_1;UNITY_5;ENABLE_NEW_BUGREPORTER;ENABLE_2D_PHYSICS;ENABLE_4_6_FEATURES;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PHYSICS_PHYSX3;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_LICENSE;ENABLE_AUDIOMIXER_SUSPEND;ENABLE_EDITOR_METRICS;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_LOCALIZATION;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_TEXTUREID_MAP;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN</DefineConstants>
+	<ErrorReport>prompt</ErrorReport>
+	<WarningLevel>4</WarningLevel>
+	<NoWarn>0169</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>True</Optimize>
-    <OutputPath>Temp\bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <NoWarn>0169</NoWarn>
+	<DebugType>pdbonly</DebugType>
+	<Optimize>true</Optimize>
+	<OutputPath>Temp\bin\Release\</OutputPath>
+	<DefineConstants>TRACE</DefineConstants>
+	<ErrorReport>prompt</ErrorReport>
+	<WarningLevel>4</WarningLevel>
+	<NoWarn>0169</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="UnityEngine">
-      <HintPath>C:\Program Files\Unity\Editor\Data\Managed\UnityEngine.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor">
-      <HintPath>C:\Program Files\Unity\Editor\Data\Managed\UnityEditor.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Xml" />
+	<Reference Include="System" />
+    <Reference Include="System.XML" />
+	<Reference Include="System.Core" />
+	<Reference Include="System.Xml.Linq" />
+	<Reference Include="UnityEngine">
+	  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+	</Reference>
+	<Reference Include="UnityEditor">
+	  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+	</Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\Enemy\BaseballWolf\BaseballWolfMovement.cs" />
-    <Compile Include="Assets\Scripts\Enemy\Controllers\EnemyController.cs" />
-    <Compile Include="Assets\Scripts\Enemy\FootballWolf\FootballScript.cs" />
-    <Compile Include="Assets\Scripts\Enemy\FootballWolf\FootballWolfMovement.cs" />
-    <Compile Include="Assets\Scripts\Enemy\Mikey\Movement\MikeyMovement.cs" />
-    <Compile Include="Assets\Scripts\Enemy\Movement\EnemyMovement.cs" />
-    <Compile Include="Assets\Scripts\Environment\Hazard.cs" />
-    <Compile Include="Assets\Scripts\Environment\HazardTurret.cs" />
-    <Compile Include="Assets\Scripts\Player\Actions\PlayerSwitch.cs" />
-    <Compile Include="Assets\Scripts\Player\General\GhostModel.cs" />
-    <Compile Include="Assets\Scripts\Player\General\PlayerModel.cs" />
-    <Compile Include="Assets\Scripts\Player\General\ZombieModel.cs" />
-    <Compile Include="Assets\Scripts\Player\Ghost\Animation\GhostAnimatorController.cs" />
-    <Compile Include="Assets\Scripts\Player\Ghost\Attacks\GhostBullet.cs" />
-    <Compile Include="Assets\Scripts\Player\Ghost\Attacks\GhostHypnotize.cs" />
-    <Compile Include="Assets\Scripts\Player\Movement\PlayerFollow.cs" />
-    <Compile Include="Assets\Scripts\Player\Movement\PlayerWalking.cs" />
-    <Compile Include="Assets\Scripts\Player\Zombie\Animation\ZombieAnimatorController.cs" />
-    <Compile Include="Assets\Scripts\Player\Zombie\Attacks\ZombieAttack.cs" />
-    <Compile Include="Assets\Scripts\Scene\CameraOrthoSize.cs" />
-    <Compile Include="Assets\Scripts\Scene\LocalPositionSnapper.cs" />
-    <Compile Include="Assets\Scripts\Scene\UI\HealthController.cs" />
-    <Compile Include="Assets\Scripts\Scene\UI\PlasmaController.cs" />
-    <Compile Include="Assets\Scripts\Scene\UI\PlayerCamera.cs" />
-    <Compile Include="Assets\Scripts\Scene\WorldScaler.cs" />
-    <Reference Include="UnityEngine.UI">
-      <HintPath>C:\Program Files\Unity\Editor\Data\UnityExtensions\Unity\GUISystem\UnityEngine.UI.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Networking">
-      <HintPath>C:\Program Files\Unity\Editor\Data\UnityExtensions\Unity\Networking\UnityEngine.Networking.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Analytics">
-      <HintPath>C:\Program Files\Unity\Editor\Data\UnityExtensions\Unity\UnityAnalytics\UnityEngine.Analytics.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.iOS.Extensions.Xcode">
-      <HintPath>C:\Program Files\Unity\Editor\Data\PlaybackEngines\iOSSupport\UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
-    </Reference>
-    <None Include="Assets\Materials\%24Sprites-Bumped Diffuse.shader" />
+     <Compile Include="Assets\Scripts\Enemy\BaseballWolf\BaseballWolfMovement.cs" />
+     <Compile Include="Assets\Scripts\Enemy\Controllers\EnemyController.cs" />
+     <Compile Include="Assets\Scripts\Enemy\EnemySpawner.cs" />
+     <Compile Include="Assets\Scripts\Enemy\FootballWolf\FootballScript.cs" />
+     <Compile Include="Assets\Scripts\Enemy\FootballWolf\FootballWolfMovement.cs" />
+     <Compile Include="Assets\Scripts\Enemy\General\EnemyModel.cs" />
+     <Compile Include="Assets\Scripts\Enemy\Mikey\Movement\MikeyMovement.cs" />
+     <Compile Include="Assets\Scripts\Enemy\Movement\EnemyMovement.cs" />
+     <Compile Include="Assets\Scripts\Environment\Hazard.cs" />
+     <Compile Include="Assets\Scripts\Environment\HazardTurret.cs" />
+     <Compile Include="Assets\Scripts\Player\Actions\PlayerSwitch.cs" />
+     <Compile Include="Assets\Scripts\Player\General\GhostModel.cs" />
+     <Compile Include="Assets\Scripts\Player\General\PlayerModel.cs" />
+     <Compile Include="Assets\Scripts\Player\General\ZombieModel.cs" />
+     <Compile Include="Assets\Scripts\Player\Ghost\Animation\GhostAnimatorController.cs" />
+     <Compile Include="Assets\Scripts\Player\Ghost\Attacks\GhostBullet.cs" />
+     <Compile Include="Assets\Scripts\Player\Ghost\Attacks\GhostHypnotize.cs" />
+     <Compile Include="Assets\Scripts\Player\Ghost\Attacks\GhostPossess.cs" />
+     <Compile Include="Assets\Scripts\Player\Movement\PlayerFollow.cs" />
+     <Compile Include="Assets\Scripts\Player\Movement\PlayerWalking.cs" />
+     <Compile Include="Assets\Scripts\Player\Zombie\Animation\ZombieAnimatorController.cs" />
+     <Compile Include="Assets\Scripts\Player\Zombie\Attacks\ZombieAttack.cs" />
+     <Compile Include="Assets\Scripts\Scene\CameraOrthoSize.cs" />
+     <Compile Include="Assets\Scripts\Scene\FollowCamera.cs" />
+     <Compile Include="Assets\Scripts\Scene\LocalPositionSnapper.cs" />
+     <Compile Include="Assets\Scripts\Scene\UI\HealthController.cs" />
+     <Compile Include="Assets\Scripts\Scene\UI\PlasmaController.cs" />
+     <Compile Include="Assets\Scripts\Scene\UI\PlayerCamera.cs" />
+     <Compile Include="Assets\Scripts\Scene\WorldScaler.cs" />
+     <None Include="Assets\Materials\$Sprites-Bumped Diffuse.shader" />
+ <Reference Include="UnityEngine.UI">
+ <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEngine.Networking">
+ <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEngine.Analytics">
+ <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
+ </Reference>
+ <Reference Include="UnityEditor.iOS.Extensions.Xcode">
+ <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
+ </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -92,4 +97,5 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  
 </Project>
