--- a/Test3/Assembly-CSharp-vs.csproj
+++ b/Test3/Assembly-CSharp-vs.csproj
@@ -55,6 +55,7 @@
      <Compile Include="Assets\Scripts\Enemy\General\EnemyModel.cs" />
      <Compile Include="Assets\Scripts\Enemy\Mikey\Movement\MikeyMovement.cs" />
      <Compile Include="Assets\Scripts\Enemy\Movement\EnemyMovement.cs" />
+     <Compile Include="Assets\Scripts\Environment\FearObject.cs" />
      <Compile Include="Assets\Scripts\Environment\Hazard.cs" />
      <Compile Include="Assets\Scripts\Environment\HazardTurret.cs" />
      <Compile Include="Assets\Scripts\Player\Actions\PlayerSwitch.cs" />
