--- a/Test3/Assembly-CSharp.csproj
+++ b/Test3/Assembly-CSharp.csproj
@@ -47,37 +47,30 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Enemy\BaseballWolf\BaseballWolfMovement.cs" />
-     <Compile Include="Assets\Scripts\Enemy\Controllers\EnemyController.cs" />
      <Compile Include="Assets\Scripts\Enemy\EnemySpawner.cs" />
      <Compile Include="Assets\Scripts\Enemy\FootballWolf\FootballScript.cs" />
      <Compile Include="Assets\Scripts\Enemy\FootballWolf\FootballWolfMovement.cs" />
      <Compile Include="Assets\Scripts\Enemy\General\Enemy.cs" />
-     <Compile Include="Assets\Scripts\Enemy\General\EnemyModel.cs" />
      <Compile Include="Assets\Scripts\Enemy\Mikey\Movement\MikeyMovement.cs" />
-     <Compile Include="Assets\Scripts\Enemy\Movement\EnemyMovement.cs" />
      <Compile Include="Assets\Scripts\Environment\FearObject.cs" />
      <Compile Include="Assets\Scripts\Environment\Hazard.cs" />
      <Compile Include="Assets\Scripts\Environment\HazardTurret.cs" />
      <Compile Include="Assets\Scripts\Model\Common\Attack.cs" />
      <Compile Include="Assets\Scripts\Model\Common\Health.cs" />
+     <Compile Include="Assets\Scripts\Model\Common\Plasma.cs" />
      <Compile Include="Assets\Scripts\Model\Effects\Flicker.cs" />
-     <Compile Include="Assets\Scripts\Player\Actions\PlayerSwitch.cs" />
-     <Compile Include="Assets\Scripts\Player\General\GhostModel.cs" />
-     <Compile Include="Assets\Scripts\Player\General\PlayerModel.cs" />
-     <Compile Include="Assets\Scripts\Player\General\ZombieModel.cs" />
+     <Compile Include="Assets\Scripts\Player\General\Player.cs" />
+     <Compile Include="Assets\Scripts\Player\General\PlayerFollow.cs" />
+     <Compile Include="Assets\Scripts\Player\General\PlayerSwitch.cs" />
      <Compile Include="Assets\Scripts\Player\Ghost\Animation\GhostAnimatorController.cs" />
      <Compile Include="Assets\Scripts\Player\Ghost\Attacks\GhostBullet.cs" />
      <Compile Include="Assets\Scripts\Player\Ghost\Attacks\GhostHypnotize.cs" />
      <Compile Include="Assets\Scripts\Player\Ghost\Attacks\GhostPossess.cs" />
-     <Compile Include="Assets\Scripts\Player\Movement\PlayerFollow.cs" />
-     <Compile Include="Assets\Scripts\Player\Movement\PlayerWalking.cs" />
      <Compile Include="Assets\Scripts\Player\Zombie\Animation\ZombieAnimatorController.cs" />
      <Compile Include="Assets\Scripts\Player\Zombie\Attacks\ZombieAttack.cs" />
      <Compile Include="Assets\Scripts\Scene\CameraOrthoSize.cs" />
      <Compile Include="Assets\Scripts\Scene\FollowCamera.cs" />
      <Compile Include="Assets\Scripts\Scene\LocalPositionSnapper.cs" />
-     <Compile Include="Assets\Scripts\Scene\UI\HealthController.cs" />
-     <Compile Include="Assets\Scripts\Scene\UI\PlasmaController.cs" />
      <Compile Include="Assets\Scripts\Scene\UI\PlayerCamera.cs" />
      <Compile Include="Assets\Scripts\Scene\WorldScaler.cs" />
      <None Include="Assets\Materials\$Sprites-Bumped Diffuse.shader" />
