Possession scripts/ better player colliders

--- a/Test3/Assembly-CSharp-vs.csproj
+++ b/Test3/Assembly-CSharp-vs.csproj
@@ -60,6 +60,8 @@
      <Compile Include="Assets\Scripts\Model\Common\Health.cs" />
      <Compile Include="Assets\Scripts\Model\Common\Plasma.cs" />
      <Compile Include="Assets\Scripts\Model\Effects\Flicker.cs" />
+     <Compile Include="Assets\Scripts\Model\Object\FearPossess.cs" />
+     <Compile Include="Assets\Scripts\Model\Object\Possessable.cs" />
      <Compile Include="Assets\Scripts\Player\General\Player.cs" />
      <Compile Include="Assets\Scripts\Player\General\PlayerFollow.cs" />
      <Compile Include="Assets\Scripts\Player\General\PlayerSwitch.cs" />
